--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Aaron's Pong Game</title>
+  <title>Mal's Pong Game</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <style>
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-8 gameboard">
       <center>
-        <h1 class="cover-heading">My Pong Game</h1>
+        <h1 class="cover-heading">My Pong Game :) </h1>
         <canvas id="pong" data-processing-sources="pong.pde"/></canvas>
       </center>
     </div>
