--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <style>
     .scoreboard {
-      background-color: #2ba6cb;
+      background-color: #FF0066;
     }
   </style>
 </head>
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-8 gameboard">
       <center>
-        <h1 class="cover-heading">My Pong Game :) </h1>
+        <h1 class="cover-heading">P-O-N-G</h1>
         <canvas id="pong" data-processing-sources="pong.pde"/></canvas>
       </center>
     </div>
